k8s/overlays/production/api-replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-panel-api
spec:
  replicas: 2
